[package]
name = "wise_units"
version = "0.2.0"
authors = ["Steve Loveless <steve@agrian.com>"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.0"
num-bigint = "0.2"
# num-rational = "0.2"
num-integer = "0.1"
num-traits = "0.2"
pest = "^1.0"
pest_derive = "^1.0"
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true, default-features = false }

[dependencies.num-rational]
path = "../../../not_my_projects/num-rational"
features = ["bigint"]

[dev-dependencies]
criterion = "0.2"
lazy_static = "1.0"
pretty_assertions = "*"
serde_json = { version = "1.0", default-features = false }

[build-dependencies]
wise_units-atom_generator = { path = "../atom_generator" }

[features]
with_serde = ["serde", "serde_derive"]

[[bench]]
name = "measurements_benchmarks"
harness = false

[[bench]]
name = "unit_benchmarks"
harness = false
